<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        android:id="@+id/register_now_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/register_now"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/register_now_text"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/profileimg"
        android:contentDescription="@string/profile_image" />

        <Button
            android:id="@+id/select_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#009688"
            android:text="@string/select_image" />

        <Button
            android:id="@+id/capture_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#4CAF50"
            android:text="Capture Image" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_image_button"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_text"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_edit"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/email"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_text"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edit"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/phone"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/phone_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:hint="@string/phone_hint"
        android:inputType="phone" />

    <TextView
        android:id="@+id/address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_edit"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/address"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/address_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:hint="@string/address_hint"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/city_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_edit"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/city"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/city_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/city_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:hint="@string/city_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/city_edit"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/confirm_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edit"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/confirm_password"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/confirm_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_below="@id/confirm_password_edit"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:backgroundTint="#2196F3"
            android:text="@string/register"
            android:textSize="18sp" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>