<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AdminLoginActivity">

    <TextView
        android:id="@+id/sign_in_now_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in_now"
        android:textSize="40sp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/admin_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_now_text"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/email"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/admin_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_email_text"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/admin_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_email_edit_text"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/admin_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_password_text"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/admin_login_button"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_below="@id/admin_password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="#039509"
        android:text="@string/login"
        android:textSize="18sp" />


</RelativeLayout>