<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/item_image_desc"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingTop="4dp"
        android:paddingBottom="2dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal"
        android:text="Sample Item Name" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:paddingBottom="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal"
        android:text="Sample item description goes here. This should give an idea about the item." />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:text="@string/price" />

        <TextView
            android:id="@+id/item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:text="@string/rating"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="17dp"
            android:contentDescription="@string/star_icon_desc"
            android:src="@drawable/star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/item_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:text="feedback" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/orderNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Order Now" />
        <Button
            android:id="@+id/btn_view_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Review"
            android:layout_marginStart="16dp" />
    </LinearLayout>
</LinearLayout>
